--- a/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.html
+++ b/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.html
@@ -40,6 +40,9 @@
         <a class="nav-link" routerLink="/product-catalog" routerLinkActive="active">المنتجات</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/offers" routerLinkActive="active">العروض</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/customers" routerLinkActive="active">العملاء</a>
       </li>
       <li class="nav-item" *ngIf="isAdmin">
