--- a/WebUI/ClientApp/src/app/pages/product-catalog/brands/brand-editor/brand-editor.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/brands/brand-editor/brand-editor.component.html
@@ -15,27 +15,16 @@
                 </div>
             </div>
             <div class="col-5">
+                <img [src]="BasePhotoUrl + brand.photoUrl" style="width: 60px;" [hidden]="croppedImage"
+                    onerror="this.src='assets/images/placeholder.png';">
                 <img [src]="croppedImage" [style.border]="croppedImage ? '1px solid black' : 'none'" />
                 <div class="progress m-3" *ngIf="uploadPercent > 0">
                     <div class="progress-bar" role="progressbar" [style.width.%]="uploadPercent" aria-valuemin="0"
                         aria-valuemax="100">{{uploadPercent}}%</div>
                 </div>
-                <button class="btn btn-small btn-success m-3" (click)="uploadImage()" *ngIf="showUploadButton">رفع
+                <button class="btn btn-small btn-success m-3" (click)="uploadImage()" [hidden]="!croppedImage">رفع
                     الصورة</button>
             </div>
-            <!-- <div class="col-5 product-img-wrapper"> 
-                    <img [src]="imgURL" class="img-fluid" *ngIf="imgURL">
-                    <label for="product-img" class="mt-2">
-                        <ng-container *ngIf="imgURL; else add">
-                            <span class="btn btn-outline-secondary">استبدال الصورة</span>
-                        </ng-container>
-                        <ng-template #add>
-                            <span class="btn btn-outline-secondary">إضافة صورة</span>
-                        </ng-template>
-                    </label>
-                    <input #file type="file" id="product-img" hidden accept='image/*' (change)="preview(file.files)" />
-                </div> -->
-
         </div>
 
         <div class="row">
@@ -50,22 +39,24 @@
             </div>
             <div class="col-6">
                 <input type="file" (change)="fileChangeEvent($event)" />
-                <br />
-                <br />
-                <button class="btn btn-sm btn-primary" (click)="rotateLeft()">تدوير لليسار</button>
-                <button class="btn btn-sm btn-primary" (click)="rotateRight()">تدوير لليمين</button>
-                <button class="btn btn-sm btn-primary" (click)="flipHorizontal()">قلب افقيا</button>
-                <button class="btn btn-sm btn-primary" (click)="flipVertical()">قلب راسيا</button>
-                <br />
-                <br />
+                <div [hidden]="!croppedImage">
+                    <br />
+                    <br />
+                    <button class="btn btn-sm btn-primary" (click)="rotateLeft()">تدوير لليسار</button>
+                    <button class="btn btn-sm btn-primary" (click)="rotateRight()">تدوير لليمين</button>
+                    <button class="btn btn-sm btn-primary" (click)="flipHorizontal()">قلب افقيا</button>
+                    <button class="btn btn-sm btn-primary" (click)="flipVertical()">قلب راسيا</button>
+                    <br />
+                    <br />
 
-                <button class="btn btn-sm btn-primary"
-                    (click)="toggleContainWithinAspectRatio()">{{containWithinAspectRatio?'ملء نسبة العرض إلى الارتفاع':'تحتوي على نسبة العرض إلى الارتفاع'}}</button>
-                <button class="btn btn-sm btn-primary" (click)="resetImage()">إلغاء التغيرات</button>
-                <br />
-                <br />
-                <button class="btn btn-sm btn-primary" (click)="zoomOut()">تصغير -</button>
-                <button class="btn btn-sm btn-primary" (click)="zoomIn()">تكبير +</button>
+                    <button class="btn btn-sm btn-primary"
+                        (click)="toggleContainWithinAspectRatio()">{{containWithinAspectRatio?'ملء نسبة العرض إلى الارتفاع':'تحتوي على نسبة العرض إلى الارتفاع'}}</button>
+                    <button class="btn btn-sm btn-primary" (click)="resetImage()">إلغاء التغيرات</button>
+                    <br />
+                    <br />
+                    <button class="btn btn-sm btn-primary" (click)="zoomOut()">تصغير -</button>
+                    <button class="btn btn-sm btn-primary" (click)="zoomIn()">تكبير +</button>
+                </div>
             </div>
         </div>
     </div>
