--- a/WebUI/ClientApp/src/app/pages/offer-managment/offers/offers.component.html
+++ b/WebUI/ClientApp/src/app/pages/offer-managment/offers/offers.component.html
@@ -19,7 +19,8 @@
         <div class="card">
             <div class="card-body" id="collapseOne" aria-labelledby="headingOne">
                 <div class="table-responsive" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
-                    (scrolled)="onScroll()" [scrollWindow]="false">
+                    (scrolled)="onScroll()" [scrollWindow]="false" cdkDropList class="example-list"
+                    (cdkDropListDropped)="drop($event)">
                     <table class="table table-hover table-dashboard mb-0">
                         <thead>
                             <tr>
@@ -33,7 +34,8 @@
                                     <img src="assets/images/nodata.svg" class="nodata-img">
                                 </td>
                             </tr>
-                            <tr *ngFor="let offer of offers; let i = index" rel="off-canvas" class="canvas-btn">
+                            <tr *ngFor="let offer of offers; let i = index" rel="off-canvas"
+                                class="canvas-btn example-box" cdkDrag>
                                 <th scope="row">{{ i + 1 }}</th>
                                 <td (click)="openEditorToUpdateOffer(offer)">
                                     {{ offer?.name }}
