--- a/WebUI/ClientApp/src/app/pages/offer-managment/offers/offers.component.scss
+++ b/WebUI/ClientApp/src/app/pages/offer-managment/offers/offers.component.scss
@@ -1,38 +1,73 @@
 .active {
-    left: 0px;
-    opacity: 1;
-  }
-  
-  /* .ais-SearchBox { margin-bottom: 1em } */
-  .pagination-wrapper {
-    margin: 1rem auto;
-  }
-  .ais-Pagination-item {
-    padding: 0.5rem;
-  }
-  
-  .search-btn {
-    position: absolute;
-    left: 1rem;
-  }
-  
-  .page-item:first-child .page-link {
-    margin-left: 0;
-    border-top-right-radius: 0.25rem;
-    border-bottom-right-radius: 0.25rem;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-  .page-item:last-child .page-link {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-top-left-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
-  }
-  .nodata-img {
-    width: 400px;
-    height: 400px;
-    margin: 0 auto;
-    display: block;
-  }
-  
+  left: 0px;
+  opacity: 1;
+}
+
+/* .ais-SearchBox { margin-bottom: 1em } */
+.pagination-wrapper {
+  margin: 1rem auto;
+}
+.ais-Pagination-item {
+  padding: 0.5rem;
+}
+
+.search-btn {
+  position: absolute;
+  left: 1rem;
+}
+
+.page-item:first-child .page-link {
+  margin-left: 0;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.page-item:last-child .page-link {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+.nodata-img {
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  display: block;
+}
+// .example-list {
+//   width: 100%;
+//   max-width: 100%;
+//   border: solid 1px #ccc;
+//   min-height: 60px;
+//   display: block;
+//   background: white;
+//   border-radius: 4px;
+//   overflow: hidden;
+// }
+
+.example-box {
+  cursor: move;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
