Adding photo editor to product category

--- a/WebUI/ClientApp/src/app/pages/product-catalog/brands/brand-editor/brand-editor.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/brands/brand-editor/brand-editor.component.html
@@ -24,7 +24,7 @@
                         <span class="btn btn-outline-secondary">إضافة صورة</span>
                     </ng-template>
                 </label>
-                <input #file type="file" id="product-img" hidden accept='image/*' (change)="preview($event)" />
+                <input #file type="file" id="product-img" hidden accept='image/*' (change)="changePhoto($event)" />
             </div>
         </div>
     </div>
