--- a/WebUI/ClientApp/src/app/pages/offer-managment/offers/offer-editor/offer-editor.component.html
+++ b/WebUI/ClientApp/src/app/pages/offer-managment/offers/offer-editor/offer-editor.component.html
@@ -15,16 +15,17 @@
                 </div>
             </div>
             <div class="col-5 offer-img-wrapper">
-                <img [src]="imgURL" class="img-fluid" *ngIf="imgURL">
+                <img [src]="BasePhotoUrl + offer.photoUrl" class="img-fluid"
+                    onerror="this.src='assets/images/placeholder.png';">
                 <label for="offer-img" class="mt-2">
-                    <ng-container *ngIf="imgURL; else add">
+                    <ng-container *ngIf="offer.photoUrl; else add">
                         <span class="btn btn-outline-secondary">استبدال الصورة</span>
                     </ng-container>
                     <ng-template #add>
                         <span class="btn btn-outline-secondary">إضافة صورة</span>
                     </ng-template>
                 </label>
-                <input #file type="file" id="offer-img" hidden accept='image/*' (change)="preview(file.files)" />
+                <input #file type="file" id="offer-img" hidden accept='image/*' (change)="changePhoto($event)" />
             </div>
         </div>
         <div class="row mb-3 w-100">
