--- a/WebUI/ClientApp/src/app/pages/offer-managment/offers/offers.component.html
+++ b/WebUI/ClientApp/src/app/pages/offer-managment/offers/offers.component.html
@@ -24,6 +24,7 @@
                     <table class="table table-hover table-dashboard mb-0">
                         <thead>
                             <tr>
+                                <th scope="col" class="border-top-0"></th>
                                 <th scope="col" class="border-top-0">رقم</th>
                                 <th scope="col" class="border-top-0">الإسم</th>
                             </tr>
@@ -36,7 +37,12 @@
                             </tr>
                             <tr *ngFor="let offer of offers; let i = index" rel="off-canvas"
                                 class="canvas-btn example-box" cdkDrag>
-                                <th scope="row">{{ i + 1 }}</th>
+                                <td>
+                                    <mat-icon cdkDragHandle>menu</mat-icon>
+                                </td>
+                                <td (click)="openEditorToUpdateOffer(offer)">
+                                    {{ i + 1 }}
+                                </td>
                                 <td (click)="openEditorToUpdateOffer(offer)">
                                     {{ offer?.name }}
                                 </td>
