--- a/WebUI/ClientApp/src/app/pages/offer-managment/offers/offer-editor/offer-editor.component.html
+++ b/WebUI/ClientApp/src/app/pages/offer-managment/offers/offer-editor/offer-editor.component.html
@@ -41,13 +41,12 @@
                     onerror="this.src='assets/images/placeholder.png';">
                 <label for="offer-img" class="mt-2">
                     <ng-container *ngIf="offer.photoUrl; else add">
-                        <span class="btn btn-outline-secondary">استبدال الصورة</span>
+                        <span class="btn btn-outline-secondary" (click)="changePhoto(offer.photoUrl)">استبدال الصورة</span>
                     </ng-container>
                     <ng-template #add>
-                        <span class="btn btn-outline-secondary">إضافة صورة</span>
+                        <span class="btn btn-outline-secondary" (click)="changePhoto()">إضافة صورة</span>
                     </ng-template>
                 </label>
-                <input #file type="file" id="offer-img" hidden accept='image/*' (change)="changePhoto($event)" />
             </div>
         </div>
         <div class="row mt-5" *ngIf="isEditing">
