--- a/WebUI/ClientApp/src/app/pages/product-catalog/brands/brand-editor/brand-editor.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/brands/brand-editor/brand-editor.component.html
@@ -18,13 +18,12 @@
                 <img [src]="BasePhotoUrl + brand.photoUrl" onerror="this.src='assets/images/placeholder.png';">
                 <label for="product-img" class="mt-2">
                     <ng-container *ngIf="brand.photoUrl; else add">
-                        <span class="btn btn-outline-secondary">استبدال الصورة</span>
+                        <span class="btn btn-outline-secondary" (click)="changePhoto(brand.photoUrl)">استبدال الصورة</span>
                     </ng-container>
                     <ng-template #add>
-                        <span class="btn btn-outline-secondary">إضافة صورة</span>
+                        <span class="btn btn-outline-secondary" (click)="changePhoto()">إضافة صورة</span>
                     </ng-template>
                 </label>
-                <input #file type="file" id="product-img" hidden accept='image/*' (change)="changePhoto($event)" />
             </div>
         </div>
     </div>
