--- a/WebUI/ClientApp/src/app/pages/product-catalog/products/product-editor/product-editor.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/products/product-editor/product-editor.component.html
@@ -51,13 +51,12 @@
           onerror="this.src='assets/images/placeholder.png';">
         <label for="product-img" class="mt-2">
           <ng-container *ngIf="product.photoUrl; else add">
-            <span class="btn btn-outline-secondary">استبدال الصورة</span>
           </ng-container>
+          <span class="btn btn-outline-secondary" (click)="changePhoto(product.photoUrl)">استبدال الصورة</span>
           <ng-template #add>
-            <span class="btn btn-outline-secondary">إضافة صورة</span>
+            <span class="btn btn-outline-secondary" (click)="changePhoto()">إضافة صورة</span>
           </ng-template>
         </label>
-        <input #file type="file" id="product-img" hidden accept='image/*' (change)="changePhoto($event)" />
       </div>
     </div>
     <!-- item Units -->
