--- a/WebUI/ClientApp/src/app/shared/components/popups/photo-editor/photo-editor.component.scss
+++ b/WebUI/ClientApp/src/app/shared/components/popups/photo-editor/photo-editor.component.scss
@@ -21,28 +21,30 @@ form {
     position: absolute;
     z-index: -1;
 }
-.inputfile + label {
-    font-size: 1.25em;
-    font-weight: 700;
-    color: white;
-    background-color: black;
-    display: inline-block;
-    cursor: pointer; /* "hand" cursor */
-}
+// .inputfile + label {
+//     font-size: 1.25em;
+//     font-weight: 700;
+//     color: white;
+//     background-color: black;
+//     display: inline-block;
+//     cursor: pointer; /* "hand" cursor */
+// }
 
-.inputfile:focus + label,
-.inputfile + label:hover {
-    background-color: red;
-}
+// .inputfile:focus + label,
+// .inputfile + label:hover {
+//     background-color: red;
+// }
 
-.inputfile:focus + label {
-    outline: 1px dotted #000;
-    outline: -webkit-focus-ring-color auto 5px;
-}
+// .inputfile:focus + label {
+//     outline: 1px dotted #000;
+//     outline: -webkit-focus-ring-color auto 5px;
+// }
 
 .img-corpper {
     border: solid 1px black;
     border-style: dashed;
+    width: 300px;
+    height: 170px;
     // width: 200px;
     // height: 200px;
 }
